# deephorizon

./: .gitignore  README.md  README_TR.md  SUMMARY.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  ci.yml.disabled  security.yml
docs/: AIRFLOW.md  DATA.md  DEVOPS.md  DVC.md  README.md  SOZLUK.md  pipelines.md
docs/adr/: 0001-gin-framework-secimi.md
infra/: README.md
infra/docker/: README.md  airflow.Dockerfile  api.Dockerfile  frontend.Dockerfile  frontend.Dockerfile.dockerignore
infra/k8s/: app-of-apps.yaml
infra/k8s/airflow/: kustomization.yaml  values.yaml  workspace-pvc.yaml
infra/k8s/airflow/manifests/: airflow.yaml
infra/k8s/app/: kustomization.yaml
infra/k8s/apps/: airflow-postgresql.yaml  airflow.yaml  app.yaml  data.yaml  minio.yaml  ml.yaml  mlflow-postgresql.yaml  mlflow.yaml  redis.yaml  secrets.yaml
infra/k8s/data/: airflow-postgres.yaml  kustomization.yaml  minio-service.yaml  minio-statefulset.yaml
infra/k8s/minio/: kustomization.yaml  namespace.yaml
infra/k8s/ml/: kustomization.yaml  mlflow.yaml
infra/k8s/mlflow/: kustomization.yaml  mlflow.yaml  namespace.yaml
infra/k8s/postgresql/airflow/: kustomization.yaml  postgres.yaml
infra/k8s/postgresql/mlflow/: kustomization.yaml  postgres.yaml
infra/k8s/redis/: namespace.yaml  redis.yaml
infra/k8s/secrets/: airflow-db-credentials.yaml  airflow-keys.yaml  minio-credentials.yaml  mlflow-db-credentials.yaml  mlflow-s3-credentials.yaml  redis-credentials.yaml
pipelines/: README.md  pipelines_yapılandırma_README.md
pipelines/dags/: eht_ingest.py  synthetic_generation.py  training_data_build.py
pipelines/plugins/: deephorizon_utils.py
proto/: buf.gen.yaml  buf.yaml
proto/deephorizon/v1/: common.proto  inference.proto
requirements/: base.txt  data.txt  ml.txt  serving.txt
scripts/: README.md  download_eht_data.py  ge_suite.py  generate_synthetic_data.py  generate_training_data.py  test_normalization.py  test_normalization_run.py  visualize_samples.py
services/api/: README.md  go.mod  go.sum
services/api/api/: openapi.yaml
services/api/cmd/server/: main.go
services/api/internal/grpc_client/: client.go
services/api/internal/handlers/: enhance.go  handler.go  health.go  metrics.go  models.go
services/api/internal/jobstore/: jobstore.go
services/api/internal/metrics/: metrics.go
services/frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
services/frontend/app/: globals.css  layout.tsx  page.tsx
services/frontend/app/models/: page.tsx
services/frontend/components/: before-after-viewer.tsx  site-header.tsx
services/frontend/lib/: api.ts  mock-data.ts  types.ts  utils.ts
services/ml/: README.md  __init__.py  _compat.py  minio_loader.py
services/ml/checkpoints/: checkpoint.py
services/ml/data/: dataloader.py  dataset.py
services/ml/evaluation/: __init__.py  benchmark.py  metrics.py
services/ml/losses/: loss.py
services/ml/models/: unet.py
services/ml/training/: train.py  train_with_validation.py
(+5 files in other folders)
