[project]
name = "deephorizon"
version = "0.0.1"
description = "Deep learning super-resolution and denoising for black hole images from radio telescope arrays"
readme = "README.md"
requires-python = ">=3.13,<3.14"  # 3.14 turns ehtim's SyntaxWarnings into SyntaxError — revisit upstream first.
authors = [{ name = "Octapull Interns" }]

# Verified on 2026-05-25: `uv sync --extra data --extra ml --extra dev`
# on Python 3.13.13 resolves to numpy 2.4 + torch 2.12 + ehtim 1.2.10
# in a single venv. See README "Known caveats" for ehtim quirks.

[project.optional-dependencies]
data = [
  "ehtim>=1.2.10",
  "astropy>=7.0.0",
  # [s3] extra'si boto3/s3fs getirir; onsuz MinIO remote'una baglanilamaz
  # (dvc push -> "missing dependency: dvc-s3"). Bkz. docs/DVC.md
  "dvc[s3]>=3.59.0",
  "great-expectations>=1.4.0",
  # ehtim imports pkg_resources, which setuptools may drop in 82+.
  # Hold the line until ehtim upstream migrates to importlib.resources.
  "setuptools<82",
]
ml = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "torchmetrics>=1.6.0",
  "lpips>=0.1.4",
  "mlflow>=2.21.0",
  "optuna>=4.3.0",
]
serving = [
  "torch>=2.6.0",
  "onnxruntime-gpu>=1.20.0",
  "grpcio>=1.70.0",
  "grpcio-tools>=1.70.0",
  "protobuf>=5.29.0",
  "prometheus-client>=0.22.0",
  "evidently>=0.6.0",
]
dev = [
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["services", "scripts"]
addopts = "-q --cov --cov-report=term-missing --cov-fail-under=80"
